# pgx-knowledge-assembly

./: .gitignore  CPICRec_Codeine_CYP2D6.html  CPIC_Phenotype_CYP2C9.html  CPIC_Phenotype_CYP2D6.html  CPIC_Phenotype_CYP3A5.html  CPIC_Phenotype_SLCO1B1.html  CPIC_Phenotype_UGT1A1.html  CPIC_abacavir.html  CPIC_allopurinol.html  CPIC_amitriptyline.html  CPIC_carbamazepine.html  CPIC_clomipramine.html  CPIC_codeine_.html  CPIC_desipramine.html  CPIC_escitalopram.html  CPIC_fluvoxamine.html  CPIC_imipramine.html  CPIC_mercaptopurine.html  CPIC_ondansetron.html  CPIC_paroxetine.html  CPIC_sertraline.html  CPIC_simvastatin.html  CPIC_thioguanine.html  CPIC_trimipramine.html  Procfile  chatbot_logs.log.1  chatbot_logs.log.2  chatbot_logs.log.3  chatbot_logs.log.4  chatbot_logs.log.5  index.html  package-lock.json  package.json  pgx_ka_info_page.html  pyproject.toml  readme.md  requirements.txt
collection/CPICRec_codeine_CYP2D6/: index.html  metadata.json  package.json  pyproject.toml  recommendation.js
collection/CPICRec_codeine_CYP2D6/cpicrec_codeine_cyp2d6/: recommendation.py
collection/CPICRec_codeine_CYP2D6/tests/: codeine-rec-CYP2D6.test.js  test_knowledge.py  test_service.py
collection/CPICRec_tramadol_CYP2D6/: index.html  metadata.json  package.json  pyproject.toml  recommendation.js
collection/CPICRec_tramadol_CYP2D6/cpicrec_tramadol_cyp2d6/: __init__.py  recommendation.py
collection/CPICRec_tramadol_CYP2D6/tests/: test_knowledge.py  test_service.py  tramadol-rec-CYP2D6.test.js
collection/CPIC_Phenotype_CYP2D6/: index.html  library_service_specification.md  metadata.json  package.json  phenotype.js  pyproject.toml
collection/CPIC_Phenotype_CYP2D6/cpic_phenotype_cyp2d6/: __init__.py  phenotype.py
collection/CPIC_Phenotype_CYP2D6/tests/: CYP2D6-geno-pheno.test.js  test_knowledge.py  test_phenotype_Intermediate_Metabolizer.py  test_phenotype_Normal_Metabolizer.py  test_phenotype_Poor_Metabolizer.py  test_phenotype_TBD.py  test_phenotype_Ultrarapid_Metabolizder.py  test_service.py
pgx-demos/chatbot/: .env  Procfile  README.md  pyproject.toml
pgx-demos/chatbot/chatbot/: chatbot.py  openai_chatbot_with_assistant_api.py
pgx-demos/chatbot/chatbot/metadata/: CPICRec_abacavir_HLA-B.json  CPICRec_allopurinol_HLA-B.json  CPICRec_clopidogrel_CYP2C19.json  (+10 more)
pgx-demos/chatbot/metadata/: CPICRec_clomipramine_CYP2C19_CYP2D6.json  CPIC_Phenotype_CYP2C19.json
pgx-ka/: ServiceReadMe.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  sample.profile
pgx-ka/all-recommendation/: api-service.js  plugin-service.js
pgx-ka/all-recommendation/library-service/: library-service.js
pgx-ka/pain_therapy_recommendation/: knowledge_sets.py  library_service.py
pgx-ka/tests/: library-service.readme.md  plugin-service.readme.md
pgx-ka/tests/unit/: plugin-service.test.js
pgx-kb/: README.md  ServiceReadMe.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml
pgx-kb/all-recommendation/: api-service.js  knowledgeLoader.js
pgx-kb/all-recommendation/library-service/: knowledge-sets.js
pgx-kb/pain_therapy_recommendation/: __init__.py
pgx-kb/pgx_kb/: knowledge_sets.py  library_service.py
pgx-kb/src/: api-service.js  knowledgeLoader.js  library-service.js  plugin-service.js
pgx-kb/src/library-service/: knowledge-sets.js  library-service.js
pgx-kb/tests/: library-service.readme.md  plugin-service.readme.md  test_library_service.py  test_pain_medication_service.py
pgx-kb/tests/unit/: library-service.test.js  plugin-service.test.js
(+254 files in other folders)
