[tool.poetry]
name = "pgx-ka"
version = "1.0"
description = "A sample knowledge assembly that uses CPIC and DPWG collections (KnowledgeSets)."
authors = ["Knowledge Systems Lab, University of Michigan <kgrid-developers@umich.edu>"]
license = "license.md"
readme = "README.md"
packages = [{ include = "pain_therapy_recommendation" }]

[tool.poetry.dependencies]
python = "^3.11"
cpicrec-tramadol-cyp2d6 = {path = "../collection/CPICRec_tramadol_CYP2D6"}
cpicrec-codeine-cyp2d6 = {path = "../collection/CPICRec_codeine_CYP2D6"}
cpic-phenotype-cyp2d6 = {path = "../collection/CPIC_Phenotype_CYP2D6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
