[tool.poetry]
name = "pgx-kb"
version = "1.0"
description = "A sample knowledgebase that uses CPIC and DPWG collections (KnowledgeSets)."
authors = ["Knowledge Systems Lab, University of Michigan <kgrid-developers@umich.edu>"]
license = "license.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cpic-phenotype-cyp2d6 = {path = "/home/faridsei/dev/code/pgx-knowledge-base/collection/CPIC_Phenotype_CYP2D6/dist/cpic_phenotype_cyp2d6-1.1-py3-none-any.whl"}
cpicrec-codeine-cyp2d6 = {path = "/home/faridsei/dev/code/pgx-knowledge-base/collection/CPICRec_codeine_CYP2D6/dist/cpicrec_codeine_cyp2d6-1.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
